--- a/Makefile.am
+++ b/Makefile.am
@@ -51,7 +51,7 @@ fpm -s dir -t rpm -n core \
 	--description "Common Open Research Emulator" \
 	--url https://github.com/coreemu/core \
 	--vendor "$(PACKAGE_VENDOR)" \
-	-p core_VERSION_ARCH.rpm \
+	-p core_python$(FPM_PYTHON)_VERSION_ARCH.rpm \
 	-v $(PACKAGE_VERSION) \
 	--rpm-init scripts/core-daemon \
 	-d "tcl" \
@@ -63,7 +63,7 @@ fpm -s dir -t rpm -n core \
 	-d "iproute" \
 	-d "libev" \
 	-d "net-tools" \
-	-d "python >= 2.7" \
+	-d "python >= $(FPM_PYTHON)" \
 	-C $(DESTDIR)
 endef
 
@@ -74,7 +74,7 @@ fpm -s dir -t deb -n core \
 	--description "Common Open Research Emulator" \
 	--url https://github.com/coreemu/core \
 	--vendor "$(PACKAGE_VENDOR)" \
-	-p core_VERSION_ARCH.deb \
+	-p core_python$(FPM_PYTHON)_VERSION_ARCH.deb \
 	-v $(PACKAGE_VERSION) \
 	--deb-systemd scripts/core-daemon.service \
 	-d "tcl" \
@@ -87,7 +87,7 @@ fpm -s dir -t deb -n core \
 	-d "ebtables" \
 	-d "iproute2" \
 	-d "libev4" \
-	-d "python >= 2.7" \
+	-d "python >= $(FPM_PYTHON)" \
 	-C $(DESTDIR)
 endef
 
