--- a/corefx/pom.xml
+++ b/corefx/pom.xml
@@ -15,6 +15,7 @@
         <jung.version>2.1.1</jung.version>
         <jackson.version>2.9.9</jackson.version>
         <grpc.version>1.20.0</grpc.version>
+        <log4j.version>2.9.0</log4j.version>
     </properties>
 
     <dependencies>
@@ -59,24 +60,14 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.11.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.9.0</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.socket</groupId>
-            <artifactId>socket.io-client</artifactId>
-            <version>0.8.3</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
