--- a/daemon/Pipfile
+++ b/daemon/Pipfile
@@ -9,6 +9,8 @@ coredev = "python scripts/core-daemon -f data/core.conf -l data/logging.conf"
 [dev-packages]
 grpcio-tools = "*"
 core = {editable = true,path = "."}
+isort = "*"
+pre-commit = "*"
 
 [packages]
 configparser = "*"
