--- a/daemon/setup.cfg
+++ b/daemon/setup.cfg
@@ -1,2 +1,9 @@
 [aliases]
 test=pytest
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=100
